Bug 1126164 - Avoid setting clip regions on plugin windows if the same clip region was already set. r=roc